@@ -1,5 +1,5 @@
 /*
- * "$Id: client.c,v 1.91.2.93 2004/08/28 19:47:08 mike Exp $"
+ * "$Id: client.c,v 1.91.2.94 2004/09/09 15:10:29 mike Exp $"
  *
  *   Client routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -1569,8 +1569,6 @@ ReadClient(client_t *con)		/* I - Client to read from */
 
             SetStringf(&con->filename, "%s/%08x", RequestRoot, request_id ++);
 	    con->file = open(con->filename, O_WRONLY | O_CREAT | O_TRUNC, 0640);
-	    fchmod(con->file, 0640);
-	    fchown(con->file, RunUser, Group);
 
 #ifdef FD_CLOEXEC
 	   /*
@@ -1588,6 +1586,10 @@ ReadClient(client_t *con)		/* I - Client to read from */
 	      if (!SendError(con, HTTP_REQUEST_TOO_LARGE))
 		return (CloseClient(con));
 	    }
+
+	    fchmod(con->file, 0640);
+	    fchown(con->file, RunUser, Group);
+	    fcntl(con->file, F_SETFD, fcntl(con->file, F_GETFD) | FD_CLOEXEC);
 	    break;
 
 	case HTTP_DELETE :
@@ -1820,8 +1822,6 @@ ReadClient(client_t *con)		/* I - Client to read from */
 
           SetStringf(&con->filename, "%s/%08x", RequestRoot, request_id ++);
 	  con->file = open(con->filename, O_WRONLY | O_CREAT | O_TRUNC, 0640);
-	  fchmod(con->file, 0640);
-	  fchown(con->file, RunUser, Group);
 
 #ifdef FD_CLOEXEC
 	   /*
@@ -1839,6 +1839,10 @@ ReadClient(client_t *con)		/* I - Client to read from */
 	    if (!SendError(con, HTTP_REQUEST_TOO_LARGE))
 	      return (CloseClient(con));
 	  }
+
+	  fchmod(con->file, 0640);
+	  fchown(con->file, RunUser, Group);
+          fcntl(con->file, F_SETFD, fcntl(con->file, F_GETFD) | FD_CLOEXEC);
 	}
 
 	if (con->http.state != HTTP_POST_SEND)
@@ -1957,6 +1961,16 @@ SendCommand(client_t      *con,
     fd = open(con->filename, O_RDONLY);
   else
     fd = open("/dev/null", O_RDONLY);
+
+  if (fd < 0)
+  {
+    LogMessage(L_ERROR, "SendCommand: %d Unable to open \"%s\" for reading: %s",
+               con->http.fd, con->filename ? con->filename : "/dev/null",
+	       strerror(errno));
+    return (0);
+  }
+
+  fcntl(fd, F_SETFD, fcntl(fd, F_GETFD) | FD_CLOEXEC);
 
   con->pipe_pid = pipe_command(con, fd, &(con->file), command, options);
 
@@ -3224,7 +3238,7 @@ pipe_command(client_t *con,		/* I - Client connection */
   * Create a pipe for the output...
   */
 
-  if (pipe(fds))
+  if (cupsdPipe(fds))
   {
     ClearString(&query_string);
 
@@ -3282,17 +3296,14 @@ pipe_command(client_t *con,		/* I - Client connection */
       close(0);
       if (dup(infile) < 0)
 	exit(errno);
-      close(infile);
     }
 
     close(1);
     if (dup(fds[1]) < 0)
       exit(errno);
-    close(fds[1]);
 
     close(2);
     dup(CGIPipes[1]);
-    close(CGIPipes[1]);
 
    /*
     * Change umask to restrict permissions on created files...
@@ -3414,5 +3425,5 @@ CDSAWriteFunc(SSLConnectionRef connection,	/* I  - SSL/TLS connection */
 
 
 /*
- * End of "$Id: client.c,v 1.91.2.93 2004/08/28 19:47:08 mike Exp $".
+ * End of "$Id: client.c,v 1.91.2.94 2004/09/09 15:10:29 mike Exp $".
  */
