@@ -1,5 +1,5 @@
 /*
- * "$Id: cupsd.h,v 1.28.2.26 2004/08/23 18:01:56 mike Exp $"
+ * "$Id: cupsd.h,v 1.28.2.27 2004/09/09 15:10:29 mike Exp $"
  *
  *   Main header file for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -208,8 +208,9 @@ extern void	SetString(char **s, const char *v);
 extern void	SetStringf(char **s, const char *f, ...);
 extern void	StartServer(void);
 extern void	StopServer(void);
+extern int	cupsdPipe(int *fds);
 
 
 /*
- * End of "$Id: cupsd.h,v 1.28.2.26 2004/08/23 18:01:56 mike Exp $".
+ * End of "$Id: cupsd.h,v 1.28.2.27 2004/09/09 15:10:29 mike Exp $".
  */
