@@ -1,5 +1,5 @@
 /*
- * "$Id: dirsvc.c,v 1.73.2.57 2004/08/23 18:43:12 mike Exp $"
+ * "$Id: dirsvc.c,v 1.73.2.58 2004/09/09 15:10:29 mike Exp $"
  *
  *   Directory services routines for the Common UNIX Printing System (CUPS).
  *
@@ -974,6 +974,12 @@ StartBrowsing(void)
     }
 
    /*
+    * Close the socket on exec...
+    */
+
+    fcntl(BrowseSocket, F_SETFD, fcntl(BrowseSocket, F_GETFD) | FD_CLOEXEC);
+
+   /*
     * Finally, add the socket to the input selection set...
     */
 
@@ -1018,7 +1024,6 @@ StartPolling(void)
   char		bport[10];	/* Browser port */
   char		interval[10];	/* Poll interval */
   int		statusfds[2];	/* Status pipe */
-  int		fd;		/* Current file descriptor */
 #if defined(HAVE_SIGACTION) && !defined(HAVE_SIGSET)
   struct sigaction action;	/* POSIX signal handler */
 #endif /* HAVE_SIGACTION && !HAVE_SIGSET */
@@ -1050,7 +1055,7 @@ StartPolling(void)
   * polling daemon...
   */
 
-  if (pipe(statusfds))
+  if (cupsdPipe(statusfds))
   {
     LogMessage(L_ERROR, "Unable to create polling status pipes - %s.",
 	       strerror(errno));
@@ -1117,9 +1122,6 @@ StartPolling(void)
 
       close(2);
       dup(statusfds[1]);
-
-      for (fd = 3; fd < MaxFDs; fd ++)
-	close(fd);
 
      /*
       * Unblock signals before doing the exec...
@@ -2112,5 +2114,5 @@ UpdateSLPBrowse(void)
 
 
 /*
- * End of "$Id: dirsvc.c,v 1.73.2.57 2004/08/23 18:43:12 mike Exp $".
+ * End of "$Id: dirsvc.c,v 1.73.2.58 2004/09/09 15:10:29 mike Exp $".
  */
